  * svwait: replace builtin echo with /bin/echo -n (for Darwin)
  * svctool -freebsd: remove svscan config/rc file with --config=rm-boot
  * svscan, supervise, svc, svstat, svok - use /run or /var/run on systems that support it
  * Makefile: added run_init.o object for svc, svstat, svok
  * Makefile: use conf-runfs to configure daemontools to use /run, /var/run
  * svscan.c, qmailctl, svscan_rc - renamed svscan.pid to .svscan.pid
  * added man page for docker-entrypoint
  * replaced absolute paths with relative path in services to make them work in any service directory
  * svctool: added control file servicedir.conf
  * svscanboot: use servicedir.conf for servicedir
  * svstat.c: print pid after displaying uptime
  * added svps program to display status of all services
  * supervise.c: run alert script on abnormal exit of service
  * supervise.c: add wait for service feature
  * svstat.c: display wait status
  * svstat.c: print errors to stderr instead of stdout
  * removed svwait program
  * supervise: avoid recreating status file with every invocation of supervise.
  * supervise.c: maintain pid of supervise in down state and status of down state in byte 20
  * svstat.c: use byte 20 from status to indicate if service is up
  * svps: display supervise process pid when service is down
  * supervise.c: pass exit/signal of exited child to alert script/program
  * svps: display uptime of svscan
  * svps: pass output through pager
  * svps: display uptime of svscan
  * supervise: initialize svpid in main()
  * svps: fixed output for "normally up" and "normally down" status
  * systemd: Chanaged service name to SVscan Service
  * svps: remove unportable PIPESTATUS
  * minisvc: fixed syntax error
  * qmailctl: adapted for non-indimail-mta systems
  * run_init.c: changed return type to int. Return error instead of doing exit
  * svstat, svc: continue to next directory if operation on current directory fails