@@ -1,5 +1,8 @@
 /*
  * $Log: svc.c,v $
+ * Revision 1.9  2020-11-30 23:19:48+05:30  Cprogrammer
+ * change warning text message for missing directory in /run
+ *
  * Revision 1.8  2020-11-30 22:53:40+05:30  Cprogrammer
  * continue instead of exit on run_init() failure
  *
@@ -88,7 +91,7 @@ main(int argc, char **argv)
 			strerr_warn2(WARN, "unable to get current working directory: ", &strerr_sys);
 			break;
 		case -2:
-			strerr_warn4(WARN, "unable to chdir to ", dir, ": ", &strerr_sys);
+			strerr_warn4(WARN, "No run state information for ", dir, ": ", &strerr_sys);
 			break;
 		}
 #endif
@@ -119,7 +122,7 @@ main(int argc, char **argv)
 void
 getversion_svc_c()
 {
-	static char    *x = "$Id: svc.c,v 1.8 2020-11-30 22:53:40+05:30 Cprogrammer Exp mbhangui $";
+	static char    *x = "$Id: svc.c,v 1.9 2020-11-30 23:19:48+05:30 Cprogrammer Exp mbhangui $";
 
 	x++;
 }
