@@ -1,5 +1,8 @@
 /*
  * $Log: svok.c,v $
+ * Revision 1.5  2020-11-30 23:20:28+05:30  Cprogrammer
+ * change warning text message for missing directory in /run
+ *
  * Revision 1.4  2020-11-30 22:54:49+05:30  Cprogrammer
  * exit if run_init() returns non-zero exit status
  *
@@ -42,7 +45,7 @@ main(int argc, char **argv)
 		strerr_warn2(WARN, "unable to get current working directory: ", &strerr_sys);
 		_exit(111);
 	case -2:
-		strerr_warn4(WARN, "unable to chdir to ", argv[1], ": ", &strerr_sys);
+		strerr_warn4(WARN, "No run state information for ", argv[1], ": ", &strerr_sys);
 		_exit(111);
 	}
 #endif
@@ -59,7 +62,7 @@ main(int argc, char **argv)
 void
 getversion_svok_c()
 {
-	static char    *x = "$Id: svok.c,v 1.4 2020-11-30 22:54:49+05:30 Cprogrammer Exp mbhangui $";
+	static char    *x = "$Id: svok.c,v 1.5 2020-11-30 23:20:28+05:30 Cprogrammer Exp mbhangui $";
 
 	x++;
 }
